# cpp_prac

./: Задание4_ГА.txt
1/: .gitignore  CMakeLists.txt  Doxyfile  matrix_sample_fl  matrix_sample_int  matrix_sample_rat
2/: FPZ.tex  research_results  (+2 more)
4/: CMakeLists.txt  plots.py
4/report/: main.tex
4/result/: result  series_0_run_10_sol.txt  series_0_run_1_sol.txt  series_0_run_1_sol_after100.txt  series_0_run_2_sol.txt  series_0_run_2_sol_after100.txt  series_0_run_3_sol.txt  series_0_run_3_sol_after100.txt  series_0_run_6_sol.txt  series_0_run_6_sol_after100.txt  series_0_run_7_sol_after100.txt  series_1_run_1_sol.txt  series_1_run_4_sol_after100.txt  series_1_run_8_sol.txt  series_1_run_8_sol_after100.txt  series_2_run_10_sol.txt  series_2_run_1_sol.txt  series_2_run_1_sol_after100.txt  series_2_run_3_sol.txt  series_2_run_3_sol_after100.txt  series_2_run_8_sol_after100.txt  series_3_run_10_sol.txt  series_3_run_10_sol_after100.txt  series_3_run_2_sol.txt  series_3_run_2_sol_after100.txt  series_3_run_3_sol.txt  series_3_run_3_sol_after100.txt  series_3_run_4_sol.txt  series_3_run_5_sol_after100.txt  series_4_run_1_sol.txt  series_4_run_1_sol_after100.txt  series_4_run_4_sol.txt  series_4_run_8_sol_after100.txt  series_5_run_1_sol_after100.txt  series_5_run_2_sol.txt  series_5_run_4_sol_after100.txt  series_5_run_9_sol.txt  series_6_run_10_sol_after100.txt  series_6_run_1_sol_after100.txt  series_6_run_2_sol.txt  (+23 more)
4/src/: Breed.cpp  Breed.h  LifeCondition.cpp  LifeCondition.h  MainCycle.cpp  MainCycle.h  Mutations.h  Selection.cpp  Selection.h  main.cpp
(+17 files in other folders)
